feat: add meta description for event

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,10 @@
     <title>
       Chào mừng 30 năm thành lập khoa Công nghệ thông tin - Đại học Khoa Học Huế
     </title>
+    <meta
+      name="description"
+      content="Kỉ niệm 30 năm thành lập khoa Công nghệ thông tin - Trường Đại học Khoa Học - Đại học Huế"
+    />
   </head>
   <body>
     <div id="app"></div>
